table_3/results/Meal-Planner-post-nullaway-ngt.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/mealplanner-ngt-post/src/src/main/java/de/zuellich/meal_planner/algorithms/FormatDetector.java:15: error: cannot find symbol
    boolean isSupported(@Nullable() String source);
                         ^
  symbol:   class Nullable
  location: interface FormatDetector
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/mealplanner-ngt-post/src/src/main/java/de/zuellich/meal_planner/pinterest/services/IBoardService.java:17: error: cannot find symbol
    List<Pin> getPins(@Nullable() String boardId);
                       ^
  symbol:   class Nullable
  location: interface IBoardService
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/mealplanner-ngt-post/src/src/main/java/de/zuellich/meal_planner/pinterest/services/IBoardService.java:25: error: cannot find symbol
    BoardListing getBoardListing(@Nullable() String boardId);
                                  ^
  symbol:   class Nullable
  location: interface IBoardService
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/mealplanner-ngt-post/src/src/main/java/de/zuellich/meal_planner/algorithms/RecipeScanner.java:15: error: cannot find symbol
    Recipe parse(@Nullable() String source);
                  ^
  symbol:   class Nullable
  location: interface RecipeScanner
Note: /home/nima/Desktop/nullability-docker/table_3/versions/nullaway/mealplanner-ngt-post/src/src/main/java/de/zuellich/meal_planner/config/WebConfig.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: /home/nima/Desktop/nullability-docker/table_3/versions/nullaway/mealplanner-ngt-post/src/src/main/java/de/zuellich/meal_planner/pinterest/datatypes/Pin.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 419ms
4
